[project]
name = "cytnx-doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kai", email = "kaihsinwu@gmail.com" }
]
dependencies = [
    "sphinx>=9.1.0",
    "sphinxcontrib-bibtex>=2.7.0",
    "breathe>=4.36.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxbootstrap4theme>=0.6.0",
    "setuptools>=82.0.1",
    "sphinx-multiversion>=0.2.4",
    "furo>=2025.12.19",
]
readme = "README.md"
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cytnx_doc"]
