[project]
name = "cytnx-doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kai", email = "kaihsinwu@gmail.com" }
]
dependencies = [
    "sphinx",
    "sphinxcontrib-bibtex>=2.7.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxbootstrap4theme>=0.6.0",
    "sphinx-multiversion>=0.2.4",
    "furo",
]
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
package = false
