[project]
name = "cytnx-doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kai", email = "kaihsinwu@gmail.com" }
]
dependencies = [
    "sphinx>=8.0.2",
    "sphinxcontrib-bibtex>=2.6.2",
    "sphinxcontrib-jquery>=4.1",
    "sphinxbootstrap4theme>=0.6.0",
    "sphinx-multiversion>=0.2.4",
    "furo>=2024.8.6",
]
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
package = false
