target_sources_local(cytnx
    PRIVATE
    linalg_internal_interface.hpp
    Add.cpp
    Min.cpp
    Max.cpp
    Sum.cpp
    Conj.cpp
    Conj_.cpp
    Cpr.cpp
    Diag.cpp
    Div.cpp
    Det.cpp
    Eig.cpp
    Eigh.cpp
    Qr.cpp
    Qdr.cpp
    Exp.cpp
    ExpM.cpp
    Exp_.cpp
    Expf.cpp
    Expf_.cpp
    ExpH.cpp
    ExpM.cpp
    InvM.cpp
    InvM_.cpp
    Inv_.cpp
    Inv.cpp
    Matmul.cpp
    Matmul_dg.cpp
    Mul.cpp
    Mod.cpp
    Outer.cpp
    Kron.cpp
    Trace.cpp
    Sub.cpp
    Svd.cpp
    Svd_truncate.cpp
    Tensordot.cpp
    Tensordot_dg.cpp
    Vectordot.cpp
    Pow.cpp
    Pow_.cpp
    Abs.cpp
    Hosvd.cpp
    Abs_.cpp
    Dot.cpp
    Norm.cpp
    Tridiag.cpp
    Lanczos_ER.cpp
    Lanczos_Gnd.cpp
    Lstsq.cpp
    linalg_internal_interface.cpp
)

add_subdirectory(linalg_internal_cpu)
if(USE_CUDA)
  add_subdirectory(linalg_internal_gpu)
endif()
