
# Set Kron.cpp to compile with CUDA compiler when USE_CUDA is enabled
# Use TARGET_DIRECTORY to explicitly specify the target scope (requires CMake 3.18+)
if(USE_CUDA)
  set_source_files_properties(Kron.cpp TARGET_DIRECTORY cytnx PROPERTIES LANGUAGE CUDA)
endif()

target_sources_local(cytnx
    PRIVATE
    #linalg_internal_interface.hpp
    Add.cpp
    Axpy.cpp
    Ger.cpp
    Arnoldi.cpp
    Axpy.cpp
    Ger.cpp
    iAdd.cpp
    Min.cpp
    Max.cpp
    Sum.cpp
    Conj.cpp
    Conj_.cpp
    Cpr.cpp
    Diag.cpp
    Div.cpp
    iDiv.cpp
    Det.cpp
    Eig.cpp
    Eigh.cpp
    Qr.cpp
    Qdr.cpp
    Exp.cpp
    ExpM.cpp
    Exp_.cpp
    Expf.cpp
    Expf_.cpp
    ExpH.cpp
    ExpM.cpp
    InvM.cpp
    InvM_.cpp
    Inv_.cpp
    Inv.cpp
    Matmul.cpp
    Matmul_dg.cpp
    Mul.cpp
    iMul.cpp
    Mod.cpp
    Outer.cpp
    Kron.cpp
    Trace.cpp
    Sub.cpp
    iSub.cpp
    Rand_isometry.cpp
    Svd.cpp
    Gesvd.cpp
    Rsvd.cpp
    Svd_truncate.cpp
    Gesvd_truncate.cpp
    Rsvd_truncate.cpp
    Gemm.cpp
    Gemm_Batch.cpp
    Tensordot.cpp
    Directsum.cpp
    Tensordot_dg.cpp
    Vectordot.cpp
    Pow.cpp
    Pow_.cpp
    Abs.cpp
    Hosvd.cpp
    Abs_.cpp
    Dot.cpp
    Norm.cpp
    Tridiag.cpp
    Lanczos.cpp
    Lanczos_ER.cpp
    Lanczos_Exp.cpp
    Lanczos_Gnd.cpp
    Lanczos_Gnd_Ut.cpp
    Lstsq.cpp
    #linalg_internal_interface.cpp
)

#add_subdirectory(linalg_internal_cpu)
#if(USE_CUDA)
#  add_subdirectory(linalg_internal_gpu)
#endif()
